--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pfsrealtyfront",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,6 +12,10 @@
   "dependencies": {
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.7"
   }
 }
