--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-icons": "^4.8.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
 }
