--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.14",
+    "@react-google-maps/api": "^2.18.1",
     "axios": "^1.3.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "sharp": "^0.32.0"
+    "sharp": "^0.32.0",
+    "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
